# CMakeQt5Template

./: .gitignore  CMakeLists.txt
cmake/: build.cmake  buildhelper.cmake  configurate.cmake  dependencies.cmake  external.cmake  link.cmake  link_dependencies.cmake  qt.cmake
config/: project_config.h.in
src/: main.cpp  main.ui
src/exampleexe/: main.cpp
src/examplelib/: foo.h
src/sample_executable/: bar.cpp  bar.h  main.cpp
src/sample_executable/subfolder/: baz.cpp  baz.h
src/sample_executable/subfolder/subsubfolder/: bazz.cpp  bazz.h
src/sample_module/: defines.h  foo.cpp  foo.h
