CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
CMAKE_POLICY(SET CMP0020 NEW)

SET(PROJECT "Qt5Template")

PROJECT(${PROJECT})

# set cmake custom scripts direcory
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

# include custom functions
INCLUDE(${CMAKE_MODULE_PATH}/qt.cmake)
INCLUDE(${CMAKE_MODULE_PATH}/buildhelper.cmake)
INCLUDE(${CMAKE_MODULE_PATH}/link_dependencies.cmake)

# set necessary qt libraries
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)

set(CMAKE_AUTOMOC ON)

# set project dirs
SET(PrjDir ${CMAKE_CURRENT_SOURCE_DIR})
SET(PrjSrcDir ${PrjDir}/src)
SET(PrjLibDir ${PrjDir}/lib)
SET(PrjBinDir ${PrjDir}/bin)

# define libraries
SET(PrjLibraries 
    examplelib)

# define executables
SET(PrjExecutables 
    exampleexe)

SET(PROJECTDNAMIC FALSE)
SET(DEVELOP TRUE)

# add libs and main
SET(LIBRARYFILES)
FOREACH(PrjLibrary ${PrjLibraries})
    ADDLIBRARY(LIBRARYFILES NAME ${PrjLibrary} DIR ${PrjSrcDir}/${PrjLibrary} DYNAMIC ${PROJECTDNAMIC})
ENDFOREACH(PrjLibrary ${PrjLibraries})

FOREACH(PrjExecutable ${PrjExecutables})
    SET(EXECUTBLEFILES ${LIBRARYFILES})
    ADDEXECUTABLE(EXECUTBLEFILES NAME ${PrjExecutable} DIR ${PrjSrcDir}/${PrjExecutable} DYNAMIC ${PROJECTDNAMIC})
ENDFOREACH(PrjExecutable ${PrjExecutables})

SET(MACOSX_BUNDLE_BUNDLE_NAME "Qt5Template")
SET(MACOSX_BUNDLE_BUNDLE_VERSION "1.0")
SET(MACOSX_BUNDLE_LONG_VERSION_STRING "1.0")
SET(MACOSX_BUNDLE_SHORT_VERSION_STRING "1.0")
SET(MACOSX_BUNDLE_COPYRIGHT "Copyright (c) <Year> <Name>. All rights reserved.")
SET(MACOSX_BUNDLE_GUI_IDENTIFIER "com.project.name")
SET(MACOSX_BUNDLE_ICON_FILE AppIcon.icns)

# set usage of qt modules
SETLINKDEPENDENCIES()

# set target properties on tagets (libs and exec)
IF(MSVC)    
    IF(${PROJECTDNAMIC})
        FOREACH(PrjLibrary ${PrjLibraries})
            SET_TARGET_PROPERTIES(${PrjLibrary} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PrjLibDir})
            SET_TARGET_PROPERTIES(${PrjLibrary} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PrjLibDir})
            SET_TARGET_PROPERTIES(${PrjLibrary} PROPERTIES PDB_OUTPUT_DIRECTORY ${PrjLibDir})
            SET_TARGET_PROPERTIES(${PrjLibrary} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PrjBinDir})
        ENDFOREACH(PrjLibrary ${PrjLibraries})
    ENDIF(${PROJECTDNAMIC})
    
    FOREACH(PrjExecutable ${PrjExecutables})
        SET_TARGET_PROPERTIES(${PrjExecutable} PROPERTIES
            WIN32_EXECUTABLE YES
            LINK_FLAGS "/ENTRY:mainCRTStartup"
        )
        
        IF(${DEVELOP})
            SET_TARGET_PROPERTIES(${PrjExecutable} PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:CONSOLE")
            SET_TARGET_PROPERTIES(${PrjExecutable} PROPERTIES COMPILE_DEFINITIONS_DEBUG "_CONSOLE")
            SET_TARGET_PROPERTIES(${PrjExecutable} PROPERTIES LINK_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:CONSOLE")
            SET_TARGET_PROPERTIES(${PrjExecutable} PROPERTIES COMPILE_DEFINITIONS_RELWITHDEBINFO "_CONSOLE")
            SET_TARGET_PROPERTIES(${PrjExecutable} PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS")
            SET_TARGET_PROPERTIES(${PrjExecutable} PROPERTIES LINK_FLAGS_MINSIZEREL "/SUBSYSTEM:WINDOWS")
        ENDIF(${DEVELOP})
        
        SET_TARGET_PROPERTIES(${PrjExecutable} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PrjLibDir})
        SET_TARGET_PROPERTIES(${PrjExecutable} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PrjLibDir})
        SET_TARGET_PROPERTIES(${PrjExecutable} PROPERTIES PDB_OUTPUT_DIRECTORY ${PrjBinDir})
        SET_TARGET_PROPERTIES(${PrjExecutable} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PrjBinDir})
    ENDFOREACH(PrjExecutable ${PrjExecutables})
ENDIF()
